--- a/index.html
+++ b/index.html
@@ -102,6 +102,23 @@
           </div>
         </div>
       </section>
+      <!-- our sponsors -->
+      <div class="our-sponsors">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponsors</h3>
+          <p class="text-ligth-gray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsors-company">
+          <img src="images/sponsors/spotify.png" alt="" />
+          <img src="images/sponsors/google.png" alt="" />
+          <img src="images/sponsors/amazon.png" alt="" />
+          <img src="images/sponsors/telerama.png" alt="" />
+          <img src="images/sponsors/figma.png" alt="" />
+        </div>
+      </div>
     </main>
     <footer></footer>
   </body>
